--- a/index.html
+++ b/index.html
@@ -8,34 +8,36 @@
     html, body {
       padding: 0;
       margin: 0;
-      width: 100vw;
-      height: 100vh;
+      width: 100%;
+      height: 100%;
     }
   </style>
 </head>
 <body>
-  <div id="container" style="width: 100%; height: 100%;">
-    <scene v-slot="scene">
-      <perspective-camera v-bind:share="scene"></perspective-camera>
-      <directional-light v-bind:share="scene"></directional-light>
-      <hemisphere-light v-bind:share="scene"></hemisphere-light>
+  <div id="container" style="width: 10rem; height: 10rem;">
+    <scene v-slot="share">
+      <perspective-camera v-slot="share" v-bind:share="share">
+        <webgl-renderer v-bind:share="share"></webgl-renderer>
+      </perspective-camera>
+      <directional-light v-bind:share="share"></directional-light>
+      <hemisphere-light v-bind:share="share"></hemisphere-light>
       <fbx-model
-        v-bind:share="scene"
-        v-bind:loader="fbxLoader"
+        v-bind:share="share"
         path="/three.js/examples/models/fbx/"
         file="Samba-Dancing.fbx"
-        v-bind:isActionModel="true"
+        v-bind:is-action-model="true"
       ></fbx-model>
     </scene>
-    <webgl-renderer></webgl-renderer>
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/vue"></script>
+  <script src="https://unpkg.com/vuex"></script> 
+  <script src="https://cdn.jsdelivr.net/npm/es6-promise@4/dist/es6-promise.auto.js"></script>
+
   <script src="./three.js/build/three.js"></script>
   <script src="/three.js/examples/js/loaders/FBXLoader.js"></script>
   <script src="/three.js/examples/js/libs/inflate.min.js"></script>
 
-  <script src="./src/Test.js"></script>
   <script src="./src/Bus.js"></script>
   <script src="./src/Scene.js"></script>
   <script src="./src/PerspectiveCamera.js"></script>
@@ -45,11 +47,23 @@
   <script src="./src/FBXModel.js"></script>
 
   <script>
-    
+    const store = {
+      state: {
+        models: [],
+        mixers: [],
+        fbxLoader: new THREE.FBXLoader()
+      },
+      getters: {
+        containerWidth: '',
+        containerHeight: '',
+      }
+    }
+
+    Vue.use(Vuex);
     const app = new Vue({
       el: '#container',
+      store,
       components: {
-        'test': Test,
         'scene': Scene,
         'perspective-camera': PerspectiveCamera,
         'directional-light': DirectionalLight,
@@ -57,9 +71,6 @@
         'webgl-renderer': WebGLRenderer,
         'fbx-model': FBXModel,
       },
-      data: {
-        fbxLoader: new THREE.FBXLoader()
-      }
     });
   </script>
 </body>
